--- a/.github/workflows/create_jobs.yaml
+++ b/.github/workflows/create_jobs.yaml
@@ -19,8 +19,8 @@ jobs:
       - name: Check for changes
         id: changes
         run: |
-          git add .github/workflows/main.yml
-          git add .github/workflows/test_lang.yml
+          git add .github/workflows/main.yaml
+          git add .github/workflows/test_lang.yaml
           git diff-index --quiet HEAD || echo "::set-output name=changed::true"
       - name: Commit and push changes
         run: |
