Test file with bash

--- a/.github/template/test_lang/action.yaml
+++ b/.github/template/test_lang/action.yaml
@@ -32,6 +32,5 @@ runs:
       run: |
         ${{ inputs.run_command }} 100 > /res/output-${{ inputs.folder }}-100.txt
         cat /res/output-${{ inputs.folder }}-100.txt
-    - name: Test output
-      shell: bash
-      run: python test_lang.py /res/output-${{ inputs.folder }}-100.txt
+    - name: Validate file
+      run: test_lang.sh /res/output-${{ inputs.folder }}-100.txt
