--- a/.github/template/test_lang/action.yaml
+++ b/.github/template/test_lang/action.yaml
@@ -34,4 +34,4 @@ runs:
         cat /res/output-${{ inputs.folder }}-100.txt
     - name: Validate file
       shell: bash
-      run: test_lang.sh /res/output-${{ inputs.folder }}-100.txt
+      run: ./test_lang.sh /res/output-${{ inputs.folder }}-100.txt
