--- a/.github/template/test_lang/action.yaml
+++ b/.github/template/test_lang/action.yaml
@@ -32,6 +32,9 @@ runs:
       run: |
         ${{ inputs.run_command }} 100 > /res/output-${{ inputs.folder }}-100.txt
         cat /res/output-${{ inputs.folder }}-100.txt
+    - name: Set script permissions
+      shell: bash
+      run: chmod +x ./test_lang.sh
     - name: Validate file
       shell: bash
       run: ./test_lang.sh /res/output-${{ inputs.folder }}-100.txt
