--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -20,6 +20,7 @@ runs:
         cp datasets/* /datasets
         touch /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
     - name: Build
+      if: ${{ inputs.build_command }}
       working-directory: ${{ github.workspace }}/BST/${{ inputs.folder }}
       shell: bash
       run: |
