--- a/.github/workflows/create_jobs.yaml
+++ b/.github/workflows/create_jobs.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [master]
 jobs:
-  generate_and_push_files:
+  generate_jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
