--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,13 +7,27 @@ on:
   workflow_dispatch:
 
 jobs:
-
-  
   rust:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: rust:1.67
@@ -27,12 +41,27 @@ jobs:
           build_command: rustc main.rs
           run_command: ./main
 
-  
   python3:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: python:3.11
@@ -43,15 +72,30 @@ jobs:
         uses: "./.github/template/runner"
         with:
           folder: python3
-          build_command: 
+          build_command:
           run_command: python main.py
 
-  
   cs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: mcr.microsoft.com/dotnet/sdk:5.0
@@ -62,15 +106,30 @@ jobs:
         uses: "./.github/template/runner"
         with:
           folder: cs
-          build_command: 
+          build_command:
           run_command: dotnet run
 
-  
   c:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: gcc:12
@@ -84,12 +143,27 @@ jobs:
           build_command: gcc -std=c99 -o main.out main.c node.c tree.c
           run_command: ./main.out
 
-  
   lua:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: nickblah/lua:5
@@ -100,15 +174,30 @@ jobs:
         uses: "./.github/template/runner"
         with:
           folder: lua
-          build_command: 
+          build_command:
           run_command: lua main.lua
 
-  
   cpp:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: gcc:12
@@ -122,12 +211,27 @@ jobs:
           build_command: g++ -o main.out main.cpp tree.cpp node.cpp
           run_command: ./main.out
 
-  
   ruby:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: ruby:3
@@ -138,15 +242,30 @@ jobs:
         uses: "./.github/template/runner"
         with:
           folder: ruby
-          build_command: 
+          build_command:
           run_command: ruby main.rb
 
-  
   golang:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        amount: [100, 1000, 10000, 100000, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000]
+        amount:
+          [
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            2000000,
+            3000000,
+            4000000,
+            5000000,
+            6000000,
+            7000000,
+            8000000,
+            9000000,
+            10000000,
+          ]
         attempt: [1, 2, 3, 4, 5]
     container:
       image: golang:1.20.4
@@ -157,13 +276,11 @@ jobs:
         uses: "./.github/template/runner"
         with:
           folder: golang
-          build_command: 
+          build_command:
           run_command: go run *.go
 
-
-
   summary:
-    needs: ['rust', 'python3', 'cs', 'c', 'lua', 'cpp', 'ruby', 'golang']
+    needs: ["rust", "python3", "cs", "c", "lua", "cpp", "ruby", "golang"]
 
     runs-on: ubuntu-latest
     steps:
@@ -175,7 +292,7 @@ jobs:
           path: ${{ github.workspace }}/temp
       - name: Install dependencies
         run: |
-          python -m pip install matplotlib
+          python -m pip install matplotlib docker
       - name: Generate Summary
         run: |
           ls ${{ github.workspace }}/temp/results
