--- a/.github/workflows/create_jobs.yaml
+++ b/.github/workflows/create_jobs.yaml
@@ -5,6 +5,7 @@ on:
     branches: [master]
 jobs:
   generate_jobs:
+    if: "!contains(github.event.head_commit.message, '[BOT] Update jobs')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
