--- a/.github/template/runner/action.yaml
+++ b/.github/template/runner/action.yaml
@@ -6,6 +6,9 @@ inputs:
   build_command:
     required: false
     default: ""
+  install_requires:
+    required: false
+    default: ""
   run_command:
     required: true
 
@@ -19,6 +22,12 @@ runs:
         mkdir /datasets
         cp datasets/* /datasets
         touch /res/output-${{ inputs.folder }}-${{ matrix.amount }}-${{ matrix.attempt }}.txt
+    - name: Install requirements
+      if: ${{ inputs.install_requires }}
+      working-directory: ${{ github.workspace }}/BST/${{ inputs.folder }}
+      shell: bash
+      run: |
+        ${{ inputs.install_requires }}
     - name: Build
       if: ${{ inputs.build_command }}
       working-directory: ${{ github.workspace }}/BST/${{ inputs.folder }}
