--- a/.github/workflows/create_jobs.yaml
+++ b/.github/workflows/create_jobs.yaml
@@ -13,7 +13,7 @@ jobs:
           ref: ${{ github.head_ref }}
           token: ${{ secrets.WORKFLOW_KEY }}
       - name: Install python requirements
-        run: python -m pip install -r requirements.yaml
+        run: python -m pip install -r requirements.txt
       - name: generate yaml files
         run: python generate_jobs.py
       - name: Check for changes
